--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,7 @@ You can install NMSDE from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("mmadoliat/NMSDE")
+devtools::install_github("shnezam/NMSDE")
 ```
 
 ## Example
